--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -90,7 +90,7 @@ body
   background: $documentBackgroundColor
   font-size: 14px
   line-height: 1.6
-  font-family: 'IBM Plex Mono', sans-serif
+  font-family: 'IBM Plex Mono', monospace
   color: $textColor
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
