--- a/_sass/3-sections/_default.sass
+++ b/_sass/3-sections/_default.sass
@@ -1,6 +1,6 @@
 body
   background: white
-  font-family: 'Roboto', sans-serif
+  font-family: 'IBM Plex Mono', monospace
   font-size: 16px
 .site-container
   width: 750px
