--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -5,6 +5,7 @@
 h1, h2, h3, h4, h5, h6
   color: $headlineColor
   font-weight: bold
+  text-transform: uppercase
 
 .gigantic
   font-size: 110px
@@ -12,25 +13,39 @@ h1, h2, h3, h4, h5, h6
   letter-spacing: -2px
 
 .huge, h1
-  font-size: 68px
+  font-size: 40px
   line-height: 1.05
-  letter-spacing: -1px
+  letter-spacing: .1em
+  text-decoration: underline
 
 .large, h2
-  font-size: 42px
+  font-size: 30px
   line-height: 1.14
 
 .bigger, h3
-  font-size: 26px
+  font-size: 20px
   line-height: 1.38
 
 .big, h4
-  font-size: 22px
+  font-size: 15px
+  line-height: 1.38
+  text-transform: none
+  font-style: italic
+
+h5
+  font-size: 16px
   line-height: 1.38
 
+h6
+  font-size: 12px
+  line-height: 1.38
+  letter-spacing: .1em
+
 .small, small
-  font-size: 10px
-  line-height: 1.2
+  font-size: 12px
+  line-height: 1.5
+  font-style: italic
+  letter-spacing: .05em
 
 
 
@@ -44,10 +59,10 @@ strong
   font-weight: bold
 
 hr
-  border: solid #ddd
-  border-width: 1px 0 0
+  border: solid #000
+  border-width: 2px 0 0
   clear: both
-  margin: 10px 0 30px
+  margin: 30px 0 30px
   height: 0
 
 
@@ -61,6 +76,17 @@ a
 
 a:hover, a:focus
   color: lighten($accent, 20%)
+
+.blocklink
+  background-color: $accent-light
+  border-radius: 1em
+  padding: 10px
+  text-align: center
+
+  a
+    font-size: 20px
+    font-weight: bold
+    color: white
 
 
 
@@ -98,7 +124,7 @@ body
 svg
   +size(100%)
 
-h3
+/*h3
   @extend %small-bold
   color: $accent-light
   text-align: center
@@ -109,7 +135,7 @@ fieldset
   margin: 0
   border: none
 
-@media screen and (max-width: 480px)
+/*@media screen and (max-width: 480px)
   h3
     padding: 50px 0 50px
 
