--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
 ---
-
+<!-- <h1>Portfolio</h1>
+<p>Hello World!  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut mi pellentesque, hendrerit elit quis, egestas ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis vel dui justo. Phasellus egestas augue metus, molestie lobortis risus tempus a. Sed scelerisque gravida libero, quis venenatis arcu ornare eget. Nunc bibendum est risus, eu feugiat neque euismod a. Nulla sodales, mi id sodales elementum, leo eros facilisis magna, eget ultrices libero massa at ante. Suspendisse vel erat vitae elit faucibus cursus. Etiam scelerisque id orci eget commodo. Integer id orci vel justo tempor tristique. Nulla sodales ac sapien vitae imperdiet. In pulvinar gravida aliquet. Suspendisse sagittis commodo mi sit amet pulvinar. Donec venenatis velit vel felis viverra tincidunt. -->
 {% include projects.html %}
