--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -14,21 +14,24 @@ h1, h2, h3, h4, h5, h6
 
 .huge, h1
   font-size: 40px
-  line-height: 1.05
+  line-height: 4
   letter-spacing: .1em
   text-decoration: underline
+  // margin: 2em 0
 
 .large, h2
   font-size: 30px
-  line-height: 1.14
+  line-height: 3
+  // margin: 1em 0
 
 .bigger, h3
   font-size: 20px
-  line-height: 1.38
+  line-height: 2
+  // margin: .5em 0
 
 .big, h4
   font-size: 15px
-  line-height: 1.38
+  line-height: 1.5
   text-transform: none
   font-style: italic
 
@@ -48,7 +51,6 @@ h6
   letter-spacing: .05em
 
 
-
 p
   margin: 0 0 20px 0
 
@@ -59,7 +61,7 @@ strong
   font-weight: bold
 
 hr
-  border: solid #000
+  border: solid $textColor
   border-width: 2px 0 0
   clear: both
   margin: 30px 0 30px
@@ -70,23 +72,31 @@ hr
 /* Links
   ------------------------------------	*/
 a
-  color: $accent
+  color: $accent-color
   text-decoration: none
   outline: 0
 
 a:hover, a:focus
-  color: lighten($accent, 20%)
+  color: $accent
 
 .blocklink
-  background-color: $accent-light
-  border-radius: 1em
-  padding: 10px
+  background-color: $black
+  border-radius: .5em
+  padding: 20px 30px
   text-align: center
+  width: fit-content
+  margin: 60px auto
 
   a
     font-size: 20px
-    font-weight: bold
+    font-weight: normal
+    font-style: italic
     color: white
+    text-decoration: underline
+
+  :hover, :focus
+    color: $accent-color
+
 
 
 
