--- a/_sass/3-sections/_blog.sass
+++ b/_sass/3-sections/_blog.sass
@@ -6,6 +6,7 @@
       display: inline-block
       margin-bottom: 5px
       padding: 0px
+      line-height: inherit
       font:
         size: 24px
         weight: 700
