--- a/_sass/3-sections/_default.sass
+++ b/_sass/3-sections/_default.sass
@@ -1,5 +1,5 @@
 body
-  background: white
+  background: $documentBackgroundColor
   font-family: 'IBM Plex Mono', monospace
   font-size: 16px
 .site-container
