--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -20,7 +20,7 @@
     .project-overlay
       +position(absolute, 100% 0px null 0px)
       height: 100%
-      background: fade-out(#333, 0.5)
+      background: fade-out($accent, 0.25)
       text-align: center
       //+transition
       +display(flex)
@@ -29,11 +29,12 @@
       strong
         display: block
         padding: 20px
-        color: white
+        color: $black
         line-height: 1.2
+        text-transform: uppercase
         font:
           size: 24px
-          weight: 300
+          weight: 700
     &:hover .project-overlay
       +position(absolute, 0px 0px null 0px)
 
