--- a/assets/css/all.sass
+++ b/assets/css/all.sass
@@ -4,14 +4,15 @@
 //------------------------------------------------
 // Set some colors as sass variables
 
-$accent-color: #BD5248
-$accent: #c99065
-$accent-light: adjust-hue(saturate(lighten($accent, 11%), 12.6%), 14%)
-$selectionColor: lighten($accent, 30%)
+$accent-color: #0BDB06
+$accent: #56FF53
+$accent-light: adjust-hue(saturate(darken($accent, 11%), 12.6%), 14%)
+$selectionColor: darken($accent, 30%)
 
-$textColor: #666
-$headlineColor: #333
-$bgcolor: #e5eaee
+$textColor: #3A3A3A
+$headlineColor: #202020
+$black: #121212
+$bgcolor: #fff
 $documentBackgroundColor: #fff
 
 @import '1-tools/-tools-dir'
