--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -80,7 +80,7 @@ a:hover, a:focus
   color: $accent
 
 .blocklink
-  background-color: $black
+  background-color: $accent
   border-radius: .5em
   padding: 20px 30px
   text-align: center
@@ -89,10 +89,11 @@ a:hover, a:focus
 
   a
     font-size: 20px
-    font-weight: normal
-    font-style: italic
-    color: white
+    font-weight: bold
+    // font-style: italic
+    color: $black
     text-decoration: underline
+    text-transform: uppercase
 
   :hover, :focus
     color: $accent-color
