trying to fix minor bug

--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -95,7 +95,7 @@ a:hover, a:focus
     text-decoration: underline
     text-transform: uppercase
 
-  :hover, :focus
+  a:hover, a:focus
     color: $accent-color
 
 
