--- a/_sass/3-sections/_image.sass
+++ b/_sass/3-sections/_image.sass
@@ -29,3 +29,8 @@
     left: 50%
     transform: translate(-50%, -50%)
     -ms-transform: translate(-50%, -50%)
+
+iframe
+  width: 100% 
+  height: 315px
+  border-radius: 1em
