--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -8,7 +8,8 @@ header
       weight: 700
     a
       display: inline-block
-      color: rgba(0,0,0,1)
+      text-decoration: underline
+      color: $black
       &:hover
         color: $accent-color
   nav
@@ -16,8 +17,8 @@ header
     margin: 30px 30px 0 0
     a
       display: inline-block
-      margin-left: 20px
-      color: rgba(0,0,0,1)
+      margin-left: 24px
+      color: $black
       font:
         size: 24px
         weight: 700
