--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header>
   <div class="logo">
     <a href="{{ site.github.url }}/">{{ site.title }}</a>
+    <div class="small"> A Game Design Portfolio </div>
   </div>
   <nav>
     {% for item in site.data.settings.menu %}
