--- a/_sass/3-sections/_image.sass
+++ b/_sass/3-sections/_image.sass
@@ -30,6 +30,10 @@
     transform: translate(-50%, -50%)
     -ms-transform: translate(-50%, -50%)
 
+img
+  margin: 20px auto
+  display: block
+
 iframe
   width: 100% 
   height: 315px
