--- a/_sass/3-sections/_page.sass
+++ b/_sass/3-sections/_page.sass
@@ -1,6 +1,6 @@
 .page-content
-  width: 450px
-  margin: 30px
+  width: inherit
+  margin: 0 30px
   /*h1
     line-height: 1.5
     color: black
@@ -14,4 +14,4 @@
 
 @media (max-width: 768px)
   .page-content
-    width: 80vw
+    margin: 10px
