--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -1,8 +1,9 @@
 header
   height: 90px
+  margin: 30px
   .logo
     float: left
-    margin: 30px
+    // margin: 30px
     font:
       size: 24px
       weight: 700
@@ -14,7 +15,7 @@ header
         color: $accent-color
   nav
     float: right
-    margin: 30px 30px 0 0
+    // margin: 30px 30px 0   0
     a
       display: inline-block
       margin-left: 24px
