--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -14,10 +14,10 @@ h1, h2, h3, h4, h5, h6
 
 .huge, h1
   font-size: 40px
-  line-height: 4
+  line-height: 1
   letter-spacing: .1em
   text-decoration: underline
-  // margin: 2em 0
+  margin: 2em 0
 
 .large, h2
   font-size: 30px
