--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,12 @@
       <a href="{{ site.github.url }}/projects/{{ project.url }}">
         <div class="project-unit" data-folder="{{ site.github.url }}/projects/{{ project.url }}" style="background-image: url({{ site.github.url }}/assets/img/projects/{{ project.url }}/thumbnail.jpg)">
           <div class="project-overlay">
-            <strong>{{ project.name }} <i class="fa fa-arrow-right" aria-hidden="true"></i></strong>
+            <div class="project-details">
+              <div class="header">{{ project.name }}              
+                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+              </div>
+              <div class="small">{{project.description}}</div>
+          </div>
           </div>
         </div>
       </a>
