--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
     {% include analytics.html %}
+    <!-- {% include mermaid.html %} -->
     <!-- Use Jekyll SEO plugin -->
     {% seo %}
   </head>
