--- a/_sass/3-sections/_blog.sass
+++ b/_sass/3-sections/_blog.sass
@@ -4,7 +4,8 @@
   .blog-unit
     h1
       display: inline-block
-      margin-bottom: 5px
+      margin: 0
+      margin-bottom: 3px
       padding: 0px
       line-height: inherit
       font:
@@ -19,3 +20,4 @@
       font:
         size: 14px
         weight: 700
+      margin-bottom: 10px
