--- a/_sass/3-sections/_post.sass
+++ b/_sass/3-sections/_post.sass
@@ -1,6 +1,6 @@
 .post-container
-  max-width: 600px
-  margin: 0px auto 30px
+  width: 100%
+  margin: 0px auto 0px
   position: relative
   display: block
   /*h4
