--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -1,7 +1,7 @@
 .project-container
-  max-width: 750px
+  max-width: 650px
   margin: 0px auto 0px
-  padding: 30px
+  // padding: 30px
   +clearfix
   .project-unit
     /* box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)*/
@@ -10,7 +10,7 @@
     display: block
     width: 600px
     height: 300px
-    margin: 0px auto 30px
+    margin: 0px auto 15px
     position: relative
     overflow: hidden
     background:
@@ -20,21 +20,30 @@
     .project-overlay
       +position(absolute, 100% 0px null 0px)
       height: 100%
-      background: fade-out($accent, 0.25)
+      background: fade-out($accent, 0.1)
       text-align: center
-      //+transition
+      // +transition
       +display(flex)
+      +flex-direction(column)
       +align-items(center)
       +justify-content(space-around)
-      strong
-        display: block
-        padding: 20px
-        color: $black
-        line-height: 1.2
-        text-transform: uppercase
-        font:
-          size: 24px
-          weight: 700
+      .project-details
+        .header
+          display: block
+          padding: 10px
+          color: $black
+          line-height: 1.2
+          text-transform: uppercase
+          font:
+            size: 24px
+            weight: 700
+        .small
+          display: block
+          padding: 10px
+          color: $black
+          line-height: 1.2
+          font:
+            size: 18px
     &:hover .project-overlay
       +position(absolute, 0px 0px null 0px)
 
