--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -21,17 +21,17 @@ h1, h2, h3, h4, h5, h6
 
 .large, h2
   font-size: 30px
-  line-height: 3
-  // margin: 1em 0
+  // line-height: 3
+  margin: 1.5em 0 .5em 0
 
 .bigger, h3
   font-size: 20px
-  line-height: 2
-  // margin: .5em 0
+  // line-height: 2
+  margin: .5em 0 .1em 0
 
 .big, h4
   font-size: 15px
-  line-height: 1.5
+  line-height: 1.38
   text-transform: none
   font-style: italic
 
