--- a/_sass/3-sections/_image.sass
+++ b/_sass/3-sections/_image.sass
@@ -36,6 +36,11 @@ img
 
 iframe
   width: 100% 
-  height: 315px
+  height: max-content
+  border-radius: 1em
+  overflow: hidden
+
+video
+  width: 100%
   border-radius: 1em
   overflow: hidden
