--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -16,6 +16,7 @@ h1, h2, h3, h4, h5, h6
   font-size: 40px
   line-height: 1
   letter-spacing: .1em
+  word-spacing: 0
   text-decoration: underline
   margin: 2em 0
 
