--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -100,6 +100,13 @@ a:hover, a:focus
   a:hover, a:focus
     color: $accent-color
 
+// .footnote
+//   display: inline-block
+//   background: $accent-color
+//   width: 2em
+//   height: 2em
+//   border-radius: 50%
+//   color: white
 
 
 
