--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -6,7 +6,7 @@ layout: default
   <div class="blog-container">
     {% for post in site.posts %}
       <div class="blog-unit">
-        <h1><a href="{{ site.github.url }}{{ post.url }}">{{ post.title }}</a></h1>
+        <div class="header"><a href="{{ site.github.url }}{{ post.url }}">{{ post.title }}</a></div>
         <span class="blog-date">
           {% assign d = post.date | date: "%-d"  %}
           {{ post.date | date: "%B" }}
