--- a/_sass/3-sections/_blog.sass
+++ b/_sass/3-sections/_blog.sass
@@ -2,15 +2,16 @@
   padding-top: 10px
   margin: 30px
   .blog-unit
-    h1
+    .header
       display: inline-block
       margin: 0
-      margin-bottom: 3px
+      margin-bottom: 0
       padding: 0px
       line-height: inherit
       font:
-        size: 24px
-        weight: 700
+        style: italic
+        size: 18px
+        weight: 300
       a
         color: black
       &:hover a
@@ -18,6 +19,6 @@
     .blog-date
       display: block
       font:
-        size: 14px
-        weight: 700
-      margin-bottom: 10px
+        size: 12px
+        weight: 200
+      margin-bottom: 15px
