--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -29,14 +29,14 @@ header
 
 @media (max-width: 768px)
   header
-    .logo
-      margin: 10px 30px 0px 0px
-    nav
-      margin: 0px
-      margin-top: 18px
-      float: left
-      a
-        margin-left: 0px
-        margin-right: 20px
-        font:
-          size: 16px
+    max-width: 90%
+    margin: 30px auto
+    // .logo
+    //   // margin: 10px 30px 0px 0
+    // nav
+    //   // margin: 0px
+    //   // margin-top: 18px
+    //   a
+    //     margin-left: 20px
+    //     font:
+    //       size: 20px
