--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -49,7 +49,9 @@
 
 @media (max-width: 768px)
   .project-container
-    max-width: 80vw
+    max-width: 95vw
     .project-unit
-      width: 80vw
-      height: 40vw
+      max-width: 600px
+      max-height: 300px
+      width: 95vw
+      height: 47.5vw
