--- a/_sass/2-base/_base.sass
+++ b/_sass/2-base/_base.sass
@@ -22,12 +22,12 @@ h1, h2, h3, h4, h5, h6
 
 .large, h2
   font-size: 30px
-  // line-height: 3
+  line-height: 1
   margin: 1.5em 0 .5em 0
 
 .bigger, h3
   font-size: 20px
-  // line-height: 2
+  line-height: 1
   margin: .5em 0 .1em 0
 
 .big, h4
@@ -69,6 +69,10 @@ hr
   margin: 30px 0 30px
   height: 0
 
+@media (max-width: 768px)
+  .huge, h1
+      font-size: 30px
+      margin: 1.5em 0
 
 
 /* Links
