--- a/_sass/3-sections/_header.sass
+++ b/_sass/3-sections/_header.sass
@@ -30,13 +30,16 @@ header
 @media (max-width: 768px)
   header
     max-width: 90%
-    margin: 30px auto
-    // .logo
-    //   // margin: 10px 30px 0px 0
-    // nav
-    //   // margin: 0px
-    //   // margin-top: 18px
-    //   a
-    //     margin-left: 20px
-    //     font:
-    //       size: 20px
+    margin: 30px auto 10px auto
+    .logo
+      // margin: 10px 30px 0px 0
+      font-size: 20px
+      .small
+        font-size: 10px
+    nav
+      // margin: 0px
+      // margin-top: 18px
+      a
+        margin: auto 0 auto 15px
+        font:
+          size: 20px
