--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header>
   <div class="logo">
-    <a href="{{ site.github.url }}/">{{ site.title }}</a>
+    <a href="{{ site.baseurl }}/">{{ site.title }}</a>
     <div class="small"> A Game Design Portfolio </div>
   </div>
   <nav>
     {% for item in site.data.settings.menu %}
-      <a href="{{ site.github.url }}/{{ item.url }}">{{ item.name }}</a>
+      <a href="{{ site.baseurl }}/{{ item.url }}">{{ item.name }}</a>
     {% endfor %}
   </nav>
 </header>
