--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,8 +1,8 @@
 <section>
   <div class="project-container">
     {% for project in site.data.settings.projects %}
-      <a href="{{ site.github.url }}/projects/{{ project.url }}">
-        <div class="project-unit" data-folder="{{ site.github.url }}/projects/{{ project.url }}" style="background-image: url({{ site.github.url }}/assets/img/projects/{{ project.url }}/thumbnail.jpg)">
+      <a href="{{ site.baseurl }}/projects/{{ project.url }}">
+        <div class="project-unit" data-folder="{{ site.baseurl }}/projects/{{ project.url }}" style="background-image: url({{ site.baseurl }}/assets/img/projects/{{ project.url }}/thumbnail.jpg)">
           <div class="project-overlay">
             <div class="project-details">
               <div class="header">{{ project.name }}              
